# bedrock-api-serverless

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  env.json  lambda.Dockerfile  pyproject.toml  requirements.txt  requirements_dev.txt  template.yaml
.aws-sam/: build.toml
app/: dependencies.py  main.py
app/core/: config.py
app/db/: session.py
app/error/: codes.py  exceptions.py
app/repos/: user_repo.py
app/routers/: agent_router.py  copilot_router.py  token_router.py  user_router.py  users.py
app/schemas/: agent_schemas.py  knowledge_base_schemas.py
app/services/: agent_service.py  bedrock_session_service.py  knowledge_base_service.py  user_service.py
app/tests/: conftest.py
app/tests/mocks/: mock_bedrock.py
app/tests/repos/: test_user_repo.py
app/tests/routers/: test_copilot_router.py
app/tests/services/: test_bedrock_session_service.py  test_user_service.py
migrations/: env.py
migrations/versions/: cd95d1f78bef_initial_migration.py
tests/: conftest.py
tests/unit/: test_user.py
