[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["GuillermoLB <guillelb99@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
