[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["GuillermoLB <guillelb99@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
